# axum_midend

./: .gitignore  Cargo.toml  README.md
axum_web/: Cargo.toml  config.yaml
axum_web/src/: main.rs
chat_room/: Cargo.toml
chat_room/src/: config.rs  error.rs  lib.rs  main.rs
chat_room/src/handlers/: auth.rs
chat_room/src/lib_chat_core/: mod.rs
core_lib/: Cargo.toml
src/: main.rs
