[workspace]

resolver = "2"
members = [
    "axum_web",
    "chat_room",
]
default-members = ["chat_room"]
exclude = []

[workspace.dependencies]
anyhow = "1.0.99"
axum = { version = "0.7.5", features = [
  "http2",
  "query",
  "tracing",
  "multipart",
  # "macros",
] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = { version = "0.4.38", features = ["serde"] }
jwt-simple = "0.12.9"
serde = { version = "1.0.198", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.7.4", features = [
  "chrono",
  "postgres",
  "runtime-tokio",
  "tls-rustls",
] }
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "net"] }
tower = { version = "0.4.13", features = [] }
tower-http = { version = "0.5.2", features = [
  "compression-full",
  "cors",
  "fs",
  "trace",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
utoipa = { version = "4.2.0", features = ["axum_extras", "chrono"] }
argon2 = { version = "0.5.3", features = ["std"] }